--- a/HiveHook/pom.xml
+++ b/HiveHook/pom.xml
@@ -17,10 +17,17 @@
         <artifactId>hive-exec</artifactId>
         <version>2.3.0</version>
     </dependency>
+    <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.10</version>
+        <scope>test</scope>
+    </dependency>
 </dependencies>
 
     <build>
         <sourceDirectory>src/java</sourceDirectory>
+        <testSourceDirectory>src/test</testSourceDirectory>
     </build>
 
 
