--- a/HiveHook/pom.xml
+++ b/HiveHook/pom.xml
@@ -23,6 +23,12 @@
         <version>4.10</version>
         <scope>test</scope>
     </dependency>
+    <dependency>
+        <groupId>org.easymock</groupId>
+        <artifactId>easymock</artifactId>
+        <version>3.2</version>
+        <scope>test</scope>
+    </dependency>
 </dependencies>
 
     <build>
